Bug 437715 - Keyboard backlight cannot be configured to turn off when on battery power
Summary: Keyboard backlight cannot be configured to turn off when on battery power
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.21.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 395719 444932 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-26 20:54 UTC by Nate Graham
Modified: 2023-09-13 13:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-05-26 20:54:46 UTC
[everything KDE from git master]


STEPS TO REPRODUCE
1. Have a laptop with a keyboard brightness setting that is visible to Powerdevil in the applet and the KCM
2. Plug in the laptop
3. Go to System Settings > Power Management > Energy Saving
4. Configure it to turn off the keyboard backlight when on battery power
5. Unplug the laptop


OBSERVED RESULT
The keyboard backlight does not turn off


EXPECTED RESULT
The keyboard backlight turns off
Comment 1 Nate Graham 2021-11-08 19:06:15 UTC
*** Bug 444932 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2023-09-12 14:40:42 UTC
*** Bug 395719 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas Fella 2023-09-12 18:46:21 UTC
Git commit 068c676ce3c437a78987b74930255ae23081a3c2 by Nicolas Fella.
Committed on 12/09/2023 at 20:43.
Pushed by nicolasfella into branch 'master'.

Fix setting keyboard brightness to zero in profile

M  +1    -1    daemon/actions/bundled/keyboardbrightnesscontrol.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/068c676ce3c437a78987b74930255ae23081a3c2