Fix setting keyboard brightness to zero in profile

BUG: 437715